Init basic folders and pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: NotArb Documentation
 description: Comprehensive documentation for the NotArb project.
-theme: minima
+theme: slate
 markdown: kramdown
