--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: NotArb Documentation
 description: Comprehensive documentation for the NotArb project.
-theme: slate
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme
 markdown: kramdown
